updated to june11

--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checklist Semanal</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -137,7 +135,6 @@
     </div>
     <!-- Después de la semana de tareas -->
     <button id="generate-report" class="btn-report">Generar Reporte Semanal</button>
-
     <!-- Div donde mostraremos el reporte -->
     <div id="report-container" class="report-container" style="display: none;">
         <h3>Reporte Semanal</h3>
@@ -145,4 +142,5 @@
         <p><strong>Tareas Pendientes:</strong> <span id="pending-tasks"></span></p>
     </div>
 </body>
+
 </html>
